# local-window-copilot

./: .gitignore  Local_Window_Aware_Agent_Spec_CN.md  README.md  README.txt
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: assistant.py  webui.py  window.py
backend/app/core/: config.py
backend/app/schemas/: analyze.py  assistant.py  chat.py  memory.py  observation.py  window.py
backend/app/services/: agent_orchestrator.py  agent_tools.py  assistant_chat.py  assistant_state.py  chat_history_index.py  context_budget.py  context_summary.py  dialogue_context.py  interaction_policy.py  local_copilot_identity.py  memory.py  model_runtime.py  observation_builder.py  profile_store.py  runtime_log.py  runtime_store.py  screenshot_crop.py  situation_builder.py  vision_model_client.py  window_analysis.py  window_capture.py  window_summary_store.py  window_watcher.py
backend/tests/: test_agent_orchestrator_parser.py  test_assistant_chat_service.py  test_assistant_state_api.py  test_context_assembler.py  test_context_budget.py  test_context_budget_inspect.py  test_context_compact_executor.py  test_context_compact_planner.py  test_context_compact_summarizer_prompt.py  test_context_summary_state.py  test_dialogue_context.py  test_interaction_policy.py  test_memory_service.py  test_model_runtime.py  test_observation_builder.py  test_prompt_builder.py  test_screenshot_crop.py  test_situation_builder.py  test_tool_result_budget.py  test_window_analysis_service.py  test_window_capture_api.py  test_window_watcher_analysis.py
(+58 files in other folders)
