[project]
name = "local-window-copilot-backend"
version = "0.1.0"
description = "FastAPI local orchestration service for Local Window Copilot."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
